# rust-web-service-study

./: Cargo.toml  README.md
tutor-db/: .env  Cargo.toml
tutor-db/migrations/: 20250104151329_create_tutors.sql  20250104151411_insert_tutors.sql  20250105131734_delete_tutors_row.sql  20250106145110_create_tutors_for_ch5.sql
tutor-db/src/: database.sql  main.rs
tutor-db/src/iter2/: handlers.rs  routes.rs
tutor-db/src/iter3/: db_access.rs  handlers.rs  models.rs
tutor-db/src/iter4/: db_access.rs  errors.rs  handlers.rs
tutor-nodb/: Cargo.toml
tutor-nodb/src/: errors.rs  handlers.rs  models.rs  routes.rs
