[package]
name = "tutor-nodb"
version = "0.1.0"
authors = ["ahyz0569"]
edition = "2021"
default-run="tutor-service"

[[bin]]
name = "basic-server"

[[bin]]
name = "tutor-service"

[dependencies]
# Actix web framework & run-time
actix-web = "4.2.1"
actix-rt = "2.7.0"
# Data 직렬화 라이브러리
serde = { version = "1.0.110", features = ["derive"]}
# 다른 유틸리티
chrono = { version = "0.4.11", features = ["serde"]}
# API Documentation 라이브러리
apistos = { version = "0.4.2", features = ["swagger-ui"] }
schemars = { package = "apistos-schemars", version = "0.8" }