[package]
name = "tutor-nodb"
version = "0.1.0"
authors = ["ahyz0569"]
edition = "2021"
default-run="tutor-service"

[[bin]]
name = "basic-server"

[[bin]]
name = "tutor-service"

[dependencies]
# Actix web framework & run-time
actix-web = "4.2.1"
actix-rt = "2.7.0"
# Data 직렬화 라이브러리
serde = { version = "1.0.110", features = ["derive"]}
# 다른 유틸리티
chrono = { version = "0.4.11", features = ["serde"]}
env_logger = "0.11"
# API Documentation 라이브러리
utoipa = { version = "5.3.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "8", features = ["actix-web"] }
utoipa-actix-web = "0.1.2"